Resources loaded from service workers are not downloadable https://bugs.webkit.org/show_bug.cgi?id=182848

Patch by Youenn Fablet <youenn@apple.com> on 2018-02-15
Reviewed by Chris Dumez.

Source/WebKit:

Downloads are not supporting resources loaded through service worker.
As a temporary solution, we will let network process handle it.
Note that this would not work if the URL can only be loaded through service worker.
Note also that for navigation loads, if the content type is the default one (application/octet-stream) we are overriding it to
text/html as we do not support mime sniffing yet from service worker responses.
This might interfere with automatic downloads from navigation.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::convertMainResourceLoadToDownload):

LayoutTests:

* http/tests/workers/service/resources/download-binary.php: Added.
* http/tests/workers/service/resources/service-worker-download-worker.js: Added.
* http/tests/workers/service/service-worker-download.https-expected.txt: Added.
* http/tests/workers/service/service-worker-download.https.html: Added.

Canonical link: https://commits.webkit.org/198615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228551 268f45cc-cd09-0410-ab3c-d52691b4dbfc